kubernetes/svc-a.yaml
##################################################################################################
# service A
##################################################################################################

apiVersion: v1
kind: Service
metadata:
  name: svc-a
  labels:
    app: svc-a
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
    name: http
    nodePort: 32000
  type: NodePort
  selector:
    app: svc-a
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: svc-a
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: svc-a
        version: v1
    spec:
      containers:
      - name: svc-a
        image: jiuchen1986/go-micro-service:5.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---
