kubernetes/svc-b.yaml
##################################################################################################
# service B
##################################################################################################

apiVersion: v1
kind: Service
metadata:
  name: svc-b
  labels:
    app: svc-b
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
    name: http
#    nodePort: 32000
#  type: NodePort
  selector:
    app: svc-b
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: svc-b-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: svc-b
        version: v1
    spec:
      containers:
      - name: svc-b-v1
        image: jiuchen1986/go-micro-service:simple
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: svc-b-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: svc-b
        version: v2
    spec:
      containers:
      - name: svc-b-v2
        image: jiuchen1986/go-micro-service:simple
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
