kubernetes/svc-c.yaml
##################################################################################################
# service C
##################################################################################################

apiVersion: v1
kind: Service
metadata:
  name: svc-c
  labels:
    app: svc-c
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
    name: http
#    nodePort: 32000
#  type: NodePort
  selector:
    app: svc-c
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: svc-c
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: svc-c
        version: v1
    spec:
      containers:
      - name: svc-c
        image: jiuchen1986/go-micro-service:4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---
