kubernetes/svc-f.yaml
##################################################################################################
# service F
##################################################################################################

apiVersion: v1
kind: Service
metadata:
  name: svc-f
  labels:
    app: svc-f
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
    name: http
#    nodePort: 32000
#  type: NodePort
  selector:
    app: svc-f
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: svc-f
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: svc-f
        version: v1
    spec:
      containers:
      - name: svc-f
        image: jiuchen1986/go-micro-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---
