kubernetes/ingress-svc-a.yaml
##################################################################################################
# Ingress for the service A
##################################################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-svc-a
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /api/svc-a/svc-b/svc-c
        backend:
          serviceName: svc-a
          servicePort: 8082
    host: svc-a.default
---
